@@ -152,14 +152,17 @@ dumpOneProfile(IgProfDumpInfo &info, IgProfTrace::Stack *frame)
       if (ctr->ticks || ctr->peak)
       {
 	if (ctr->def->id >= 0)
+          __extension__
 	  fprintf(info.output, " V%d:(%ju,%ju,%ju)",
 		  ctr->def->id, ctr->ticks, ctr->value, ctr->peak);
 	else
+          __extension__
 	  fprintf(info.output, " V%d=(%s):(%ju,%ju,%ju)",
 		  (ctr->def->id = info.nctrs++), ctr->def->name,
 		  ctr->ticks, ctr->value, ctr->peak);
 	
 	for (IgProfTrace::Resource *res = ctr->resources; res; res = res->nextlive)
+          __extension__
 	  fprintf(info.output, ";LK=(%p,%ju)", (void *) res->resource, res->size);
       }
     }
@@ -664,9 +667,19 @@ threadWrapper(void *arg)
   // Report the thread and enable per-thread profiling pools.
   if (s_activated)
   {
+    // Removing the __extension__ gives a warning which
+    // is acknowledged as a language problem in the C++ Standard Core 
+    // Language Defect Report
+    //
+    // http://www.open-std.org/jtc1/sc22/wg21/docs/cwg_defects.html#195
+    //
+    // since the suggested decision seems to be that the syntax should
+    // actually be "Conditionally-Supported Behavior" in some 
+    // future C++ standard I simply silence the warning.
+    __extension__
     IgProf::debug("captured thread id 0x%lx for profiling (%p, %p)\n",
 		  (unsigned long) pthread_self(),
-		  (void *) start_routine,
+		  (void *)(start_routine),
 		  start_arg);
 
     IgProf::initThread();
@@ -692,6 +705,16 @@ threadWrapper(void *arg)
   // Harvest thread profile result.
   if (s_activated)
   {
+    // Removing the __extension__ gives a warning which
+    // is acknowledged as a language problem in the C++ Standard Core
+    // Language Defect Report
+    //
+    // http://www.open-std.org/jtc1/sc22/wg21/docs/cwg_defects.html#195
+    //
+    // since the suggested decision seems to be that the syntax should
+    // actually be "Conditionally-Supported Behavior" in some
+    // future C++ standard I simply silence the warning.
+    __extension__
     IgProf::debug("leaving thread id 0x%lx from profiling (%p, %p)\n",
 		  (unsigned long) pthread_self(),
 		  (void *) start_routine,
